# vit-from-scratch

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  PROJECT_ABSTRACT.md  PROJECT_HANDBOOK.md  README.md  diagnose_mps.py  preprocess_oscd.py  pyproject.toml  pytest.ini  requirements.txt  train.py
configs/: __init__.py  config.py  train_config.yaml  train_swin_config.yaml  train_unet_config.yaml
docs/: ABLATIONS_HPC.md  REPOSITORY_LAYOUT.md  RESULTS_LAYOUT.md  SECURITY.md
models/: __init__.py  ablation_variants.py  attention.py  decoder.py  feature_difference.py  mlp.py  patch_embedding.py  siamese_swin.py  siamese_unet.py  siamese_vit.py  swin_attention.py  transformer_block.py  vit.py
notebooks/: README.md  training+ablation_studies.ipynb
scripts/: __init__.py  _paths.py  diagnose_mps.py  export_ablation_json.py  extract_patches.py  inspect_training_progress.py  plot_ablation_results.py  plot_all_training_curves.py  preprocess_oscd.py  run_ablations.py  submit_ablations_chain.sh  sync_ablations_from_hpc.sh  train_change_detection.py  train_cifar10.py  verify_pytorch_stack.py  visualize_oscd.py  visualize_predictions.py  visualize_training.py
slurm/: ablation_venv_bootstrap.sh  run_ablations.sbatch  run_ablations_A.sbatch  run_ablations_B.sbatch  run_ablations_C.sbatch  run_pipeline.sh  run_swin.sh  run_unet.sh  train_cifar10.sbatch
tests/: __init__.py  test_smoke.py
utils/: __init__.py  ablation.py  ablation_plots.py  cifar10_standalone.py  cifar_paths.py  dataset.py  evaluation.py  losses.py  metrics.py  oscd_dataset.py  training.py  visualization.py
(+4 files in other folders)
