[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vit-from-scratch"
version = "0.1.0"
description = "Vision Transformer from scratch for urban change detection (PyTorch)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.2.0",
    "tqdm>=4.65.0",
    "Pillow>=9.4.0",
    "rasterio>=1.3.0",
    "tifffile>=2023.1.23",
    "opencv-python>=4.7.0",
    "einops>=0.6.0",
    "albumentations>=1.3.0",
    "pyyaml>=6.0",
    "tensorboard>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
train-change-detection = "scripts.train_change_detection:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "utils*", "configs*", "scripts*"]
